--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,10 @@
   <groupId>com.lohika.jclub.oauth2</groupId>
   <artifactId>oauth2</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <modules>
+        <module>cli</module>
+    </modules>
+    <packaging>pom</packaging>
 
   <name>oauth2</name>
   <url>http://maven.apache.org</url>
