--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,11 @@
   <groupId>com.lohika.jclub.oauth2</groupId>
   <artifactId>oauth2</artifactId>
   <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>cli</module>
-    </modules>
-    <packaging>pom</packaging>
+  <modules>
+    <module>cli</module>
+    <module>servlet</module>
+  </modules>
+  <packaging>pom</packaging>
 
   <name>oauth2</name>
   <url>http://maven.apache.org</url>
@@ -17,4 +18,5 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
   </properties>
+
 </project>
