--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -46,6 +46,11 @@
             <version>1.22.0</version>
         </dependency>
         <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-servlet</artifactId>
+            <version>1.23.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-oauth2</artifactId>
             <version>v2-rev120-1.22.0</version>
