--- a/auth-server/src/main/resources/application.yaml
+++ b/auth-server/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+spring:
+  application:
+    name: "OAuth2 Server"
+server:
+  servlet:
+    session:
+      cookie:
+        name: UISESSION
 security:
   oauth2:
     client:
