--- a/spring/src/main/resources/application.yaml
+++ b/spring/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ auth-server:
     client-id: acme
     client-secret: acmesecret
     user-authorization-uri: http://localhost:8081/oauth/authorize
-    access-token-uri: http://localhost:8081/oauth/token
+    access-token-uri: http://${AUTH_HOST:localhost}:8081/oauth/token
     scope: profile
   resource:
-    user-info-uri: http://localhost:8081/me
+    user-info-uri: http://${AUTH_HOST:localhost}:8081/me
